--- a/css/style.css
+++ b/css/style.css
@@ -61,11 +61,9 @@ body {
 .header1234 .nav1234 ul li a:hover {
     background-color: rgba(0, 0, 0, 0.2);
     border-radius: 15px;
-    /* Fondo gris oscuro al pasar el cursor */
-
 }
 
-
+/* Fondo gris oscuro al pasar el cursor 
 /* Hero Section */
 .hero1234 {
     display: flex;
@@ -76,8 +74,6 @@ body {
     text-align: center;
     color: white;
 }
-
-
 
 .hero1234 .hero-content1234 h1 {
     font-size: var(--font-size-title);
@@ -147,7 +143,6 @@ body {
     text-align: center;
     background-color: #8cce2f;
     border-bottom: 1px solid #333;
-
 }
 
 .destinos1234 .destinos-gallery1234 {
@@ -156,7 +151,6 @@ body {
     background-color: var(--primary-color);
     justify-content: center;
     padding: 7px 7px 7px 7px;
-
 }
 
 .destino-item1234 {
@@ -184,7 +178,6 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
-
 }
 
 .noticias-list1234:hover {
@@ -194,8 +187,121 @@ body {
 
 }
 
+/**********************************************************/
+
+/*galeria de fotos*/
+.container {
+    padding: 40px;
+}
+
+.container .image-container a img {
+    height: 250px;
+    width: 350px;
+    object-fit: cover;
+    border: 10px solid #5a5757;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s linear;
+    cursor: pointer;
+}
+
+.container .image-container a img:hover {
+    transform: scale(1.1);
+    border-color: rgb(183, 183, 183);
+    /* Cambia el color del borde al pasar el cursor */
+}
+
+.container2 .image-container2 a img {
+    height: 250px;
+    width: 350px;
+    object-fit: cover;
+    border: 10px solid #5a5757;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s linear;
+    cursor: pointer;
+}
+
+.container2 {
+    padding: 40px;
+}
+
+.container2 .image-container2 a img:hover {
+    transform: scale(1.1);
+    border-color: rgb(183, 183, 183);
+}
+
+/* Cambia el color del borde al pasar el cursor */
+
+/**********************************************************/
+/* style presupuesto*/
+/*formulario*/
+h1 {
+    text-align: center;
+}
+
+form {
+    max-width: 600px;
+    margin: 0 auto;
+    border: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+input,
+select,
+button {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+input[type="checkbox"] {
+    width: auto;
+}
+
+.extras {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.extras label {
+    width: 48%;
+    margin-bottom: 10px;
+}
+
+.submit-buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+/*---------------ESTILOS CONTACTO--------------------*/
+.containercontac {
+    display: flex;
+    flex-direction: column;
+    min-height: 89vh;
+    min-width: 200px;
+
+}
+
+#map {
+    width: 100%;
+    height: 400px;
+    border: solid 1px black;
+}
+
+/*--------------------------------------------*/
+
 /*footer style*/
-/* Estilo general del footer */
 footer {
     height: 120px;
     /* Altura fija del footer */
@@ -251,122 +357,4 @@ footer {
     /* Alineación centrada */
     margin: 0;
     /* Quitamos márgenes por defecto */
-}
-
-
-
-/**********************************************************/
-/*style main destinos */
-/* Miniaturas dinámicas */
-/*galeria de fotos*/
-
-
-.container {
-    padding: 40px;
-}
-
-.container .image-container a img {
-    height: 250px;
-    width: 350px;
-    object-fit: cover;
-    border: 10px solid #5a5757;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s linear;
-    cursor: pointer;
-}
-
-.container .image-container a img:hover {
-    transform: scale(1.1);
-    border-color: rgb(183, 183, 183);
-    /* Cambia el color del borde al pasar el cursor */
-}
-
-.container2 .image-container2 a img {
-    height: 250px;
-    width: 350px;
-    object-fit: cover;
-    border: 10px solid #5a5757;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s linear;
-    cursor: pointer;
-}
-
-.container2 {
-    padding: 40px;
-}
-
-.container2 .image-container2 a img:hover {
-    transform: scale(1.1);
-    border-color: rgb(183, 183, 183);
-    /* Cambia el color del borde al pasar el cursor */
-}
-
-/**********************************************************/
-/* style presupuesto*/
-/*formulario*/
-h1 {
-    text-align: center;
-}
-
-form {
-    max-width: 600px;
-    margin: 0 auto;
-    border: 1px solid #ccc;
-    padding: 20px;
-    border-radius: 10px;
-}
-
-.form-group {
-    margin-bottom: 15px;
-}
-
-label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-}
-
-input,
-select,
-button {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-input[type="checkbox"] {
-    width: auto;
-}
-
-.extras {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.extras label {
-    width: 48%;
-    margin-bottom: 10px;
-}
-
-.submit-buttons {
-    display: flex;
-    justify-content: space-between;
-}
-
-/*--------------------------------------------*/
-
-
-#map {
-    width: 100%;
-    height: 400px;
-    border: solid 1px black;
-}
-
-/* Footer */
-.footer1234 {
-    text-align: center;
-    padding: 20px;
-    background-color: var(--primary-color);
-    color: white;
 }
