--- a/views/contacto.html
+++ b/views/contacto.html
@@ -27,10 +27,10 @@
             <img src="../assets/images/airplane-svgrepo-com.svg" alt="Logo Agencia de Viajes">
         </div>
     </header>
-    <main><br><br><br><br>
+    <main class="containercontac"><br><br><br><br>
         <h2>Ubicación de Nuestro Negocio</h2><br>
         <div id="map"></div>
-        <section id="datos-contacto">
+        <section class="datos_contac">
             <h2>Datos de Contacto</h2>
             <p><strong>Dirección:</strong> Calle Sánchez Pacheco, 16, Madrid, España
             <p><strong>Teléfono:</strong> +34 123 456 789</p>
@@ -60,10 +60,6 @@
         <!-- Texto de derechos reservados -->
         <p class="footer-text">Derechos reservados Cristhian Sena</p>
     </footer>
-
-
-
-
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
