change html pro
change html pro

--- a/views/productos.html
+++ b/views/productos.html
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="image-container" id="gallery"></div>
         </div><br><br>
-        <h3>ENCUENTRA TU PROXIMO DESTINO</h3><br><br>
+        <h2>ENCUENTRA TU PROXIMO DESTINO</h2>
         <P class="txt-galery">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi a architecto, fugit
             quibusdam delectus earum
             totam accusantium corporis, sed similique voluptatibus amet in. Ut omnis minus quae, expedita vitae
